# creass

./: .gitignore  README.md  package-lock.json  package.json  video.3gp
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx
app/src-tauri/: 2  Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: Board.tsx  CreateProjectModal.tsx  PostIt.tsx  PreviousBoard(MUESTRA).tsx  TreePath.tsx  newPostIt.tsx
app/src/components/ui/: CloseButton.tsx  ModeSwitch.tsx  Textfield.tsx  ThemeSwitch.tsx
app/src/contexts/: ThemeContext.tsx  TreeContext.tsx
app/src/pages/: Home.tsx  MyProjects.tsx  TreePathWindow.tsx
backend/: requirements.txt
backend/api/: app.py  requirements.txt
backend/api/routes/: receive.py
backend/api/schemas/: data.py
backend/api/swebsocket/: client.py  data_vector.py  output.txt  server.py
backend/api/websocket/: server.py
backend/web_scrapping/: Output.txt  alimentacion.txt  alimentacion10.txt  alimentacion11.txt  alimentacion12.txt  alimentacion13.txt  alimentacion14.txt  alimentacion15.txt  alimentacion16.txt  alimentacion17.txt  alimentacion18.txt  alimentacion19.txt  alimentacion2.txt  alimentacion20.txt  alimentacion21.txt  alimentacion22.txt  alimentacion23.txt  alimentacion24.txt  alimentacion25.txt  alimentacion3.txt  alimentacion4.txt  alimentacion5.txt  alimentacion6.txt  alimentacion7.txt  alimentacion8.txt  alimentacion9.txt  format.js  package-lock.json  package.json  test.js
backend/web_scrapping/llm_tools/: call.py  data_vector.py  main.py
(+1 files in other folders)
